# cookiecutter-fastapi-mysql

./: README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: Dockerfile  Dockerfile-local  Makefile  Pipfile  README.md  pyproject.toml
{{cookiecutter.project_slug}}/app/: main.py
{{cookiecutter.project_slug}}/app/api/: item.py
{{cookiecutter.project_slug}}/app/database/: db.py
{{cookiecutter.project_slug}}/app/db_model/: item_db.py
{{cookiecutter.project_slug}}/app/model/: item.py
{{cookiecutter.project_slug}}/app/service/: item_service.py
{{cookiecutter.project_slug}}/test/api/: test_item_api.py
